--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,8 @@ footer {
 @media (min-width: 700px) {
   .container {
     width: 700px;
-    height: 100%;
+    min-height: 100vh;
+    max-height: 100%;
     margin: 0 auto;
     background-color: var(--bg-color);
     z-index: 1;
