--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ footer {
 }
 
 #name, #email, #number, #dropdown {
-  width: 200px;
+  width: 250px;
   padding: 5px;
   border-radius: 8px;
   border-color: var(--bg-color);
@@ -45,9 +45,10 @@ footer {
 }
 
 #comment {
-  width: 95%;
+  width: 250px;
   border-radius: 8px;
   border-color: var(--bg-color);
+  box-sizing: border-box;
 }
 
 #submit {
@@ -79,6 +80,7 @@ footer {
 @media (min-width: 700px) {
   .container {
     width: 700px;
+    box-sizing: border-box;
     min-height: 100vh;
     max-height: 100%;
     margin: 0 auto;
